@@ -1,3 +1,8 @@
+2005-01-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/static.c (RegisterStaticModules): Support compiling
+	without PNG.
+
 2005-01-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/color.c (IsPaletteImage): Fix memory leak reported by
